[build-system]
requires = ["scikit-build-core>=0.4.3", "nanobind>=1.3.2", "setuptools>=42", "wheel", "cmake>=3.18"]
build-backend = "scikit_build_core.build"

[tool.scikit-build]
cmake.minimum-version = "3.18"
cmake.args = []
wheel.packages = ["src"]
wheel.expand-macos-universal-tags = true

[project]
name = "hlz"
version = "0.1.0"
description = "Hierarchical LZ compression implementation with Python bindings"
authors = [
    {name = "Ashok Cutkosky", email = "ashok@cutkosky.com"}
]
requires-python = ">=3.7"
dependencies = [
    "pygtrie>=2.5.0"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[tool.pytest.ini_options]
testpaths = ["test"]
python_files = ["test_*.py"]

[tool.scikit-build.cmake.define]
CMAKE_POSITION_INDEPENDENT_CODE = "ON" 